// Distributed under GPLv3 only as specified in repository's root LICENSE file

syntax="proto2";

package tag.aas;

message ChannelOpenRequest
{
    required int32 unknown_field = 1;
    required int32 channel_id = 2;
}
