// Distributed under GPLv3 only as specified in repository's root LICENSE file

syntax="proto2";

package tag.aas;

message ChannelOpenResponse
{
    required int32 status = 1;
}
