// Distributed under GPLv3 only as specified in repository's root LICENSE file

syntax="proto2";

package tag.aas;

message MediaChannelSetupResponse
{
    required uint32 unknown_field_1 = 1;
    required uint32 unknown_field_2 = 2;
    required uint32 unknown_field_3 = 3;
}
